- Fixed handler wrong positioning on reparenting - debuging resize, layout

--- a/src/views/MainLayout.css
+++ b/src/views/MainLayout.css
@@ -104,7 +104,8 @@ body {
 
   .draggable-item {
     background-color: #f0f0f0;
-    padding: 10px;
+    min-height: 30px;
+    /* padding: 10px; */
     /* margin: 5px; */
     border: solid 1px gray;
     cursor: move;
@@ -113,7 +114,7 @@ body {
   .sortable-item {
     position: relative;
     background-color: #f0f0f0;
-    padding: 10px;
+    /* padding: 10px; */
     width: 100%;
     height: 100%;
     margin: 0px;
@@ -163,6 +164,7 @@ body {
   .lekett-element-container
   {
     position: relative;
+    display: inline-flex;
   }
 
   .lekett-block-container
